--- a/components/Blog/styles/index.scss
+++ b/components/Blog/styles/index.scss
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+  .post-wrap {
+    margin: 40px 0;
+  }
 }
 
 .form-wrap {
