--- a/components/Header/styles/style.scss
+++ b/components/Header/styles/style.scss
@@ -8,7 +8,7 @@
     }
 
     > .container > .wrapper {
-        background: #000000 url("/static/header-promo.png") no-repeat;
+        background: #000000 url("/static/img/header-promo.png") no-repeat;
         background-position-x: 30px;
         height: 175px;
     }
@@ -20,11 +20,21 @@
 
     > .container > .main-nav > .list {
         display: flex;
+        margin-bottom: 0;
+        font-size: 18px;
     }
 
     > .container > .main-nav > .list > .item {
         padding: 0 30px 0 25px;
         line-height: 45px;
+    }
+
+    > .container > .main-nav > .list > .item > .title {
+        color: #ffffff;
+
+        &:hover {
+            color: #ffa500;
+        }
     }
 }
 
