--- a/components/Layout/styles.scss
+++ b/components/Layout/styles.scss
@@ -1,4 +1,7 @@
-@import '../../node_modules/antd/dist/antd.css';
+body {
+  font-family: 'Oswald', sans-serif;
+  font-weight: 400;
+}
 
 #__next {
   display: flex;
