--- a/components/style.scss
+++ b/components/style.scss
@@ -1,9 +1,47 @@
 $black: #000000;
+
 ul {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 li {
-    list-style: none;
+  list-style: none;
+}
+
+a, .link {
+  text-decoration: none;
+}
+
+a:focus {
+  text-decoration: none;
+}
+
+.ant-row.container {
+  height: 100%
+}
+
+.title-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  background-color: #ff9c00;
+  text-transform: uppercase;
+  padding: 10px 0;
+
+  > .link > .title {
+    color: #ffffff;
+    font-size: 30px;
+    margin-bottom: 0;
+
+    &:hover {
+      color: #f2460c;
+    }
+  }
+
+  > .text {
+    font-size: 13px;
+    cursor: default;
+  }
 }
