--- a/components/Header/styles/style.scss
+++ b/components/Header/styles/style.scss
@@ -8,14 +8,15 @@
     }
 
     > .container > .wrapper {
-        background: #000000 url("/static/img/header-promo.png") no-repeat;
+        background: #000000 url("/static/img/logo.png") no-repeat;
         background-position-x: 30px;
+        background-size: contain;
         height: 175px;
     }
 
     > .container > .main-nav {
         color: #ffffff;
-        background-color: #373636;
+        background-color: #ffa500;
     }
 
     > .container > .main-nav > .list {
@@ -33,7 +34,7 @@
         color: #ffffff;
 
         &:hover {
-            color: #ffa500;
+            color: #000000;
         }
     }
 }
