--- a/components/style.scss
+++ b/components/style.scss
@@ -18,9 +18,6 @@ a:focus {
   text-decoration: none;
 }
 
-.ant-row.container {
-  height: 100%;
-}
 
 .title-wrapper {
   display: flex;
@@ -45,4 +42,17 @@ a:focus {
     font-size: 13px;
     cursor: default;
   }
+}
+
+@media screen and (min-width: 320px) {
+  .ant-row.container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+}
+
+.ant-row.container {
+  display: flex;
+  height: 100%;
 }
