--- a/components/Header/styles/style.scss
+++ b/components/Header/styles/style.scss
@@ -11,7 +11,7 @@
             background: #000000 url("/static/img/logo.png") no-repeat;
             background-position-x: 30px;
             background-size: contain;
-            height: 175px;
+            height: 100px;
         }
 
         > .container > .main-nav {
@@ -45,7 +45,11 @@
 }
 
 @media screen and (min-width: 640px) {
-   
+    .main-header.ant-layout-header {
+        > .container > .wrapper {
+            height: 175px;
+        }
+    }
 }
 
 @media screen and (min-width: 900px) {
