--- a/components/style.scss
+++ b/components/style.scss
@@ -46,6 +46,7 @@
       color: #ffffff;
       font-size: 30px;
       margin-bottom: 0;
+      text-align: center;
 
       &:hover {
         color: #000000;
