--- a/pages/Homepage/styles/index.scss
+++ b/pages/Homepage/styles/index.scss
@@ -67,7 +67,11 @@
   width: 100%;
 }
 
-.sidebar > .banner > img {
+.sidebar > .banner > .link {
+  width: 100%;
+}
+
+.sidebar > .banner > .link > .img {
   width: 100%;
 }
 
