--- a/components/Blog/styles/index.scss
+++ b/components/Blog/styles/index.scss
@@ -3,8 +3,12 @@
   flex-direction: column;
   justify-content: center;
 
-  .post-wrap {
-    margin: 40px 0;
+  .posts-wrap.-all .post-wrap {
+    border-top: 1px solid #a8a8a8;
+  }
+
+  .posts-wrap.-all .post-wrap:first-child {
+    border-top: none;
   }
 }
 
