--- a/components/Post/styles.scss
+++ b/components/Post/styles.scss
@@ -2,7 +2,8 @@
   & {
     display: flex;
     flex-direction: column;
-    padding: 0 7%;
+    margin: 0 7%;
+    padding: 40px 0;
   }
 
   > .title {
