--- a/components/Instagram/styles.scss
+++ b/components/Instagram/styles.scss
@@ -1,16 +1,40 @@
-.instagram-wrap {
-  > .link {
-    display: flex;
-    margin-bottom: 20px;
+@media screen and (min-width: 320px) {
+  .instagram-wrap {
+    & {
+      display: flex;
+    }
 
-    &:hover {
-      opacity: 0.8
+    > .link:first-child  {
+      margin-right: 2%;
+    }
+
+    > .link {
+      display: flex;
+      margin-bottom: 20px;
+      width: 48%;
+
+      &:hover {
+        opacity: 0.8
+      }
+    }
+
+    > .link > .image {
+      width: 100%;
+      height: 200px;
+      background-size: cover
     }
   }
+}
 
-  > .link > .image {
-    width: 100%;
-    height: 200px;
-    background-size: cover
+@media screen and (min-width: 320px) {
+  .instagram-wrap {
+    & {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    > .link {
+      width: 100%;
+    }
   }
 }
