--- a/components/Social/styles/style.scss
+++ b/components/Social/styles/style.scss
@@ -4,29 +4,47 @@
             display: flex;
             justify-content: center;
         }
-    
+
         > .icon-wrap {
             display: flex;
             align-items: center;
             justify-content: center;
             width: 23.9%;
-            max-width: 90px;
             height: 60px;
             color: white;
             background: orange;
-            margin: 0 20px 0 20px;
-    
+
             &:hover {
                 background: white;
                 color: orange;
             }
         }
-    
+
         > .icon-wrap > .icon {
             font-size: 32px;
         }
     }
 }
+
+@media screen and (min-width: 480px) {
+    .social-icons {
+        > .icon-wrap {
+            margin: 0 20px 0 20px;
+        }
+    }
+}
+
+@media screen and (min-width: 640px) {
+    .social-icons {
+        > .icon-wrap {
+            max-width: 90px;
+            height: 60px;
+            color: white;
+            background: orange;
+        }
+    }
+}
+
 @media screen and (min-width: 1200px) {
     .social-icons {
         & {
