--- a/pages/Homepage/styles/index.scss
+++ b/pages/Homepage/styles/index.scss
@@ -59,7 +59,7 @@
   .container > .sidebar {
     display: flex;
     flex-direction: column;
-    padding: 20px 10px 0px 10px;
+    padding: 20px 10px 0 10px;
     background-color: #000000;
     height: auto;
   }
@@ -69,7 +69,11 @@
     width: 100%;
   }
 
-  .sidebar > .banner > img {
+  .sidebar > .banner > .link {
+    width: 100%;
+  }
+
+  .sidebar > .banner > .link > img {
     width: 100%;
   }
 
@@ -106,7 +110,6 @@
       flex-wrap: wrap;
       align-items: center;
       position: relative;
-      border: 1px solid #000000;
       padding: 25px 15px;
       cursor: default;
     }
