--- a/components/BlogPreview/styles/index.scss
+++ b/components/BlogPreview/styles/index.scss
@@ -4,13 +4,13 @@
       margin: 0 0 0;
     }
 
-     > .ant-row >.item {
+     > .wrap >.item {
        padding-bottom: 24px;
        width: 100%;
 
      }
 
-     > .ant-row > .item > .link > .img {
+     > .wrap > .item > .link > .img {
        width: 100%;
        height: 270px;
        background-size: cover;
@@ -25,8 +25,13 @@
 
 @media screen and (min-width: 640px) {
   .blog-content {
-    > .ant-row >.item {
-      width: 50%;
+    > .wrap {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    > .wrap >.item {
+      width: 49%;
 
     }
   }
