--- a/components/Instagram/styles.scss
+++ b/components/Instagram/styles.scss
@@ -2,16 +2,14 @@
   .instagram-wrap {
     & {
       display: flex;
-    }
-
-    > .link:first-child  {
-      margin-right: 2%;
+      flex-wrap: wrap;
+      padding: 0 20px;
     }
 
     > .link {
       display: flex;
       margin-bottom: 20px;
-      width: 48%;
+      width: 100%;
 
       &:hover {
         opacity: 0.8
@@ -26,15 +24,56 @@
   }
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 480px) {
   .instagram-wrap {
     & {
       display: flex;
-      flex-wrap: wrap;
+    }    
+
+    >.link:first-of-type {
+      margin-right: 2%;
     }
 
-    > .link {
-      width: 100%;
+    > .link  {
+      width: 49%;
+      margin-bottom: 0;
     }
   }
 }
+
+@media screen and (min-width: 900px) {
+  .instagram-wrap {
+    > .link > .image {
+      height: 250px;
+      background-size: cover;
+      background-position: center;
+    }
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .instagram-wrap {
+    & {
+      padding: 0;
+    }
+
+    >.link:first-of-type {
+      margin-right: 0;
+    }
+
+    > .link  {
+      width: 100%;
+      margin-bottom: 20px;
+    }
+
+    > .link > .image {
+      width: 100%;
+      height: 200px;
+      background-size: cover;
+      background-position: center left;
+    }
+  }
+}
+
+
+
