--- a/components/Social/styles/style.scss
+++ b/components/Social/styles/style.scss
@@ -26,7 +26,7 @@
     }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 640px) {
     .social-icons {
         > .icon-wrap {
             margin: 0 20px 0 20px;
@@ -34,13 +34,10 @@
     }
 }
 
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 1000px) {
     .social-icons {
         > .icon-wrap {
-            max-width: 90px;
-            height: 60px;
-            color: white;
-            background: orange;
+            margin: 0;
         }
     }
 }
