--- a/components/style.scss
+++ b/components/style.scss
@@ -29,7 +29,7 @@
 
   .ant-layout-content .ant-row.container > .ant-col-6 {
     width: 100%;
-  }
+  }  
 
   .title-wrapper {
     display: flex;
@@ -46,7 +46,7 @@
 
     > .link > .title {
       color: #ffffff;
-      font-size: 30px;
+      font-size: 28px;
       margin-bottom: 0;
       text-align: center;
       display: inline-block;
@@ -72,6 +72,28 @@
   }
 }
 
+@media screen and (min-width: 320px) {  
+  .static-container {
+    width: 100%;
+    padding: 50px 20px;
+    font-size: 17px;
+
+    .title.-main {
+      margin-bottom: 35px;
+    }
+
+    .title.-sub {
+      margin: 35px 0 15px;
+    }
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .static-container {
+    padding: 50px 40% 50px 70px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .ant-layout-content .ant-row.container {
     flex-direction: row;
@@ -83,5 +105,11 @@
 
   .ant-layout-content .ant-row.container > .ant-col-6 {
     width: 25%;
+  }
+
+  .title-wrapper {
+    > .link > .title {
+      font-size: 30px;
+    }
   }
 }
