--- a/pages/Homepage/styles/index.scss
+++ b/pages/Homepage/styles/index.scss
@@ -181,7 +181,8 @@
       align-items: center;
       position: relative;
       border: 1px solid #000000;
-      padding: 25px 15px;
+      padding: 0;
+      margin: 25px 15px;
       cursor: default;
 
       > .wrap > .text {
