--- a/pages/Homepage/styles/index.scss
+++ b/pages/Homepage/styles/index.scss
@@ -114,7 +114,7 @@
       flex-wrap: wrap;
       align-items: center;
       position: relative;
-      padding: 25px 15px 0;
+      padding: 0 15px;
       cursor: default;
     }
 
@@ -174,6 +174,10 @@
 }
 
 @media screen and (min-width: 900px) {
+  .online-shop {
+    margin: 0 20px;
+  }
+
   .magazine-wrap {
     & {
       display: flex;
@@ -181,8 +185,8 @@
       align-items: center;
       position: relative;
       border: 1px solid #000000;
-      padding: 0;
-      margin: 25px 15px;
+      padding: 25px 0;
+      margin: 0;
       cursor: default;
 
       > .wrap > .text {
